counter and product in fo

--- a/index.html
+++ b/index.html
@@ -49,26 +49,100 @@
                   <div class="text_line"></div>
                   <p>Simple and sleek design with users in mind.</p>
                   <div class="banner_bttons">
-                     <a class="bye_btn" href="#"><span><i class="fa-solid fa-arrow-right"></i></span>Buy now</a>
+                      <a class="bye_btn" href="#"><span><i class="fa-solid fa-arrow-right"></i></span>Buy now</a>
                    <a class="vidio_open" href="#">Watch our
                     video how
-                    it works <span><img src="imges/playbutton.png" alt="playbutto"></span></a>
-                  
+                    it works</a>
+                  <a class="play" href="#"><img src="imges/playbutton.png" alt="playbutton"></a>
                   </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="banner_img">
+          <img src="imges/banner_image.png" alt="banner image">
+        </div>
       </section>
-
-
-   <!-- --------bannner part end--------- -->
-
-
+   <!-- --------bannner -----part------- end--------- -->
+   <!-- --------counter---part------start--------- -->
+    <section id="count_up">
+      <div class="container">
+        <div class="row">
+         <div class="col-lg-12">
+        <div class="all_counters">
+          <div data-aos="fade-right" class="single_counter">
+           <h2><span class="counter">105</span>
+            lbs</h2>
+          <p>Net Weight</p>
+         </div>
+          <div data-aos="fade-right" class="single_counter">
+           <h2><span class="counter">26</span>
+            mph</h2>
+          <p>Top Speed</p>
+         </div>
+          <div class="single_counter">
+           <h2><span class="counter">38</span>
+             miles</h2>
+          <p>Max Range</p>
+         </div>
+          <div class="single_counter">
+           <h2><span class="counter">89</span> 
+            mm</h2>
+          <p>Max Torques </p>
+         </div>
+          <div class="single_counter">
+           <h2><span class="counter">22</span> <span>%</span> 
+            slope</h2>
+          <p>Hill Climbing</p>
+         </div>
+          <div class="single_counter">
+           <h2><span class="counter">2</span><span>x</span></h2>
+          <p>Hydralic Disc Brakes</p>
+         </div>
+        </div>
+      </div>
+      </div>
+    </section>
+   <!-- --------counte----------part-----end--------- -->
+   <!-- --------product----info------part-----start--------- -->
+    <section id="product_ifo">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="common_head">
+              <h2>Product Information</h2>
+              <p>Our Scooter has following unique design and technology features:</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="product_ditels">
+              <ul>
+                <li><img src="imges/Icon.png" alt="icon"><p>Lightweight aircraft grade aluminium frame</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Car grade lithium battery</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Self-balanced</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Plug n play</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Quick release adapter</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>RFID key card</p></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+          <div class="product_info_img">
+              <img src="imges/product_info.png" alt="product_info">
+            </div>
+    </section>
+   <!-- --------product----info------part-----end--------- -->
 
 <!-- ----jquery all version----- -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-   <!-- ----script-file---  -->
+   <!-- ---counter up plugin link------- -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <!-- ---counter up min .js---- -->
+     <script src="js/jquery.counterup.min.js"></script>
+<!-- ----script-file---  -->
     <script src="js/script.js"></script>
     <!-- ---bootstrap ---cdn----link------ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
