product motor accesorise

--- a/index.html
+++ b/index.html
@@ -135,7 +135,82 @@
             </div>
     </section>
    <!-- --------product----info------part-----end--------- -->
-
+   <!-- --------motor-------part-----start--------- -->
+    <section id="motor">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="common_head">
+              <h2>High Efficiency Motor</h2>
+              <p>More torque for powerful riding with 22% maximum hill climbing capability.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="motor_img">
+              <img src="imges/motor.png" alt="motor">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+     <!-- --------motor-------part-----end--------- -->
+      <!-- ----Accessories-------part-----start---- -->
+      <section id="Accessories">
+      <div class="container">
+        <div class="row">
+        <div class="col-lg-12">
+           <div class="common_head">
+              <h2>Multiple Accessories</h2>
+              <p>More torque for powerful riding with 22% maximum hill climbing capability.</p>
+            </div>
+        </div>
+       </div>
+        <div class="row Accessories_row">
+          <div class="col-lg-4">
+            <div class="common_list">
+              <h2>Golf Bag Rock</h2>
+               <ul>
+                <li><img src="imges/Icon.png" alt="icon"><p>Material : Aluminium alloy</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Color : Black</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Capacity : 45lbs</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Ease : Quick & adjustable</p></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="Accessories_img">
+              <img src="imges/accessories.png" alt="Accessories_img">
+            </div>
+            </div>
+        </div>
+        <div class="row Accessories_row_2">
+          <div class="col-lg-12">
+             <div class="common_list rack_list">
+              <h2>Shopping Rack</h2>
+               <ul>
+                <li><img src="imges/Icon.png" alt="icon"><p>Material : Aluminium alloy</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Color : Black</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Capacity : 45lbs</p></li>
+                <li><img src="imges/Icon.png" alt="icon"><p>Ease : Quick & adjustable</p></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="more_Accessories">
+              <h3>More Accessories Coming Soon</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="sopping_rack_img">
+        <img src="imges/shopingImg.png" alt="sopping rack img">
+      </div>
+    </section>
+  <!-- ----Accessories-------part-----end-- -->
 <!-- ----jquery all version----- -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
    <!-- ---counter up plugin link------- -->
