--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>scuti</title>
+    <!-- Aos animations link----------- -->
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- ---bootstrap ---cdn----link------ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!-- ------all-min-css------ -->
@@ -27,8 +29,19 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">GALLERY</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item fit_before">
                 <a class="nav-link active" aria-current="page" href="#">CONTACT</a>
+                  <ul>
+                     <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Whatsapp</a>
+                     </li>
+                      <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">teligram</a>
+                      </li>
+                      <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Email</a>
+                      </li>
+                  </ul>
               </li>
             </ul>
             <div class="manu_bottons">
@@ -70,12 +83,12 @@
         <div class="row">
          <div class="col-lg-12">
         <div class="all_counters">
-          <div data-aos="fade-right" class="single_counter">
+          <div class="single_counter">
            <h2><span class="counter">105</span>
             lbs</h2>
           <p>Net Weight</p>
          </div>
-          <div data-aos="fade-right" class="single_counter">
+          <div class="single_counter">
            <h2><span class="counter">26</span>
             mph</h2>
           <p>Top Speed</p>
@@ -220,6 +233,8 @@
 <!-- ----script-file---  -->
     <script src="js/script.js"></script>
     <!-- ---bootstrap ---cdn----link------ -->
+   <!-- ---aos animation--------linl-- -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
