--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>scuti</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <!-- Aos animations link----------- -->
      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+     <!-- ------silk slider link------- -->
+    
     <!-- ---bootstrap ---cdn----link------ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!-- ------all-min-css------ -->
@@ -224,6 +227,296 @@
       </div>
     </section>
   <!-- ----Accessories-------part-----end-- -->
+ <!-- -------------Gallery-----parft start---------- -->
+  <section id="gallery">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+           <div class="common_head">
+              <h2>Gallery</h2>
+              <p>View gallery of our products and make yourself satisfied with our creation.</p>
+            </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 gallery_col_1">
+          <div class="gallery_img_1">
+            <img src="imges/gallery_1.png" alt="gallery-img">
+          </div>
+          <div class="gallery_buttons">
+            <a href="#">Battery Images</a>
+            <a href="#">Spare Parts Images </a>
+            <a href="#">Charging Cable Images</a>
+          </div>
+        </div>
+        <div class="col-lg-6 gallery_col_2">
+           <div class="gallery_img_2">
+            <img src="imges/gallery_2.png" alt="gallery-img">
+          </div>
+           <div class="gallery_img_3">
+            <img src="imges/gallery_3.png" alt="gallery-img">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+ <!-- -------------Gallery-----parft end---------- -->
+  <!-- -----------colors-----parft start------- -->
+   <section id="colors">
+    <div class="container">
+       <div class="row">
+        <div class="col-lg-12">
+           <div class="common_head">
+              <h2>Colors</h2>
+              <p>Checkout our products colors.</p>
+            </div>
+        </div>
+      </div>
+      <div class="row">
+    <div class="col-lg-12">
+<div class="my_slider">
+<div class="slider-for">
+ <div class="single_slid_item">
+    <img src="imges/singleslidImge1.png" alt="">
+ </div>
+ <div class="single_slid_item">
+    <img src="imges/singelSlideImage2.png" alt="">
+ </div>
+ <div class="single_slid_item">
+    <img src="imges/singelSlideImage3.png" alt="">
+ </div>
+ <div class="single_slid_item">
+    <img src="imges/singelSlideImage4.png" alt="">
+ </div>
+</div>
+<div class="slider-nav">
+ <div class="single_slid_nav_item">
+    <img src="imges/slidenavItem1 (1).png" alt="">
+ </div>
+ <div class="single_slid_nav_item">
+    <img src="imges/slidenavItem2.png" alt="">
+ </div>
+ <div class="single_slid_nav_item">
+    <img src="imges/slidenavItem3.png" alt="">
+ </div>
+ <div class="single_slid_nav_item">
+    <img src="imges/slidenavItem4.png" alt="">
+ </div>
+</div>
+</div>
+      </div>
+      </div>
+      </div>
+   </section>
+ <!---------colors-----parft end--------  -->
+ <!-------Testimonials-------parft start--------  -->
+ <section id="Testimonials">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+           <div class="common_head">
+              <h2>Testimonials</h2>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="my_slider_2">
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile_1.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile2.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2 class="item_3">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile3.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile2.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile_1.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2 class="item_3">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile3.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2 class="item_3">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile_1.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2 class="item_3">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile2.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider_items">
+            <div class="single_slider_item">
+              <ul>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+              </ul>
+              <h2 class="item_3">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</h2>
+              <div class="rivew_profile">
+                <div class="reviwe_img">
+                  <img src="imges/profile3.png" alt="profile_1">
+                </div>
+                <div class="profile_text">
+                  <p>Serhiy Hipskyy</p>
+                  <p>CEO Universal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+ </section>
+ <!---------Testimonials-----parft end--------  -->
 <!-- ----jquery all version----- -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
    <!-- ---counter up plugin link------- -->
@@ -232,9 +525,12 @@
      <script src="js/jquery.counterup.min.js"></script>
 <!-- ----script-file---  -->
     <script src="js/script.js"></script>
-    <!-- ---bootstrap ---cdn----link------ -->
-   <!-- ---aos animation--------linl-- -->
+    <!-- ---aos animation------linl---->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+	 <!-- ---bootstrap ---cdn----link------ -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script> 
+    <!-- ------silk slider link------- -->
+     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+     <script src="js/script.js"></script>
 </body>
 </html>
