--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>scuti</title>
+    <title>scuti</title> 
+     <!-- ------silk slider link------- -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <!-- Aos animations link----------- -->
      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-     <!-- ------silk slider link------- -->
-    
     <!-- ---bootstrap ---cdn----link------ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!-- ------all-min-css------ -->
@@ -25,7 +24,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav m-auto">
+            <ul class="navbar-nav m-auto main_ul">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">PRODUCTS</a>
               </li>
@@ -86,9 +85,11 @@
         <div class="row">
          <div class="col-lg-12">
         <div class="all_counters">
-          <div class="single_counter">
-           <h2><span class="counter">105</span>
-            lbs</h2>
+         
+         <div class="single_counter">
+          <h2>
+            <span class="counter">105</span>lbs
+          </h2>
           <p>Net Weight</p>
          </div>
           <div class="single_counter">
@@ -116,6 +117,7 @@
           <p>Hydralic Disc Brakes</p>
          </div>
         </div>
+      </div>
       </div>
       </div>
     </section>
@@ -515,22 +517,89 @@
       </div>
     </div>
   </div>
- </section>
+ </section> 
  <!---------Testimonials-----parft end--------  -->
+ <!---------Subscribe To Newsletter-----parft start--------  -->
+ <section id="subscribe">
+  <div class="container">
+    <div class="row">
+       <div class="col-lg-12">
+            <div class="common_head">
+              <h2>Subscribe To Newsletter</h2>
+              <p>Subscribe to our newsletter to get amazing offers in future.</p>
+            </div>
+          </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="email_button">
+          <input type="email" placeholder="Enter your email.">
+          <a href="#">Get start</a>
+        </div>
+      </div>
+    </div>
+  </div>
+ </section>
+ <!-- ------Subscribe To Newsletter--part end---- -->
+ <!-- ------footer--part start---- -->
+ <footer>
+ <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="footer_row">
+           <div class="footer_col">
+            <h3>About</h3>
+             <ul>
+              <li><a href="#">Company</a></li>
+              <li><a href="#">Teams</a></li>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Careers</a></li>
+              </ul>
+           </div>
+           <div class="footer_col">
+            <h3>Resources</h3>
+             <ul>
+              <li><a href="#">Contact </a></li>
+              <li><a href="#">Application </a></li>
+              <li><a href="#">FQA Features</a></li>
+            </ul>
+           </div>
+           <div class="footer_col">
+            <h3>Legals</h3>
+             <ul>
+              <li><a href="#">Copyright</a></li>
+              <li><a href="#">Policy Disclaimer</a></li>
+              <li><a href="#">Terms</a></li>
+           </ul>
+           <div class="footer_icons">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+           </div>
+           </div>
+          </div>
+        </div>
+      </div> 
+    </div>
+      <p>© Copyright 2021. All rights reserved.</p>
+    <div class="footer_img">
+      <img src="imges/footerImage.png" alt="footer imge">
+    </div>
+  </footer>
+ <!-- ------footer--part end---- -->
 <!-- ----jquery all version----- -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
    <!-- ---counter up plugin link------- -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <!-- ---counter up min .js---- -->
-     <script src="js/jquery.counterup.min.js"></script>
-<!-- ----script-file---  -->
-    <script src="js/script.js"></script>
+   <script src="js/jquery.counterup.min.js"></script>
     <!-- ---aos animation------linl---->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	 <!-- ---bootstrap ---cdn----link------ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script> 
     <!-- ------silk slider link------- -->
      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- ----script-file---  -->
      <script src="js/script.js"></script>
 </body>
 </html>
